--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,8 @@
       <div class="data">
         <ul class="list-instyled">
           <li *ngFor="let todo of todoArray">
-            {{ todo }}<i class="material-icons">delete</i>
+            {{ todo
+            }}<i (click)="deleteTodo(todo)" class="material-icons">delete</i>
           </li>
         </ul>
       </div>
